logScale: reverse logScale logic (to the expected one) and allow exponential if logScale == -1 eq: reimplement using native audio node biquad filters sidepanel-right: prevent 1px border-right from messing with scrollbar interaction

--- a/src/scss/ui/workspaces.scss
+++ b/src/scss/ui/workspaces.scss
@@ -302,7 +302,9 @@ osc-panel-content {
     overflow-y: auto;
 
     &.left, &.right {
-        border-right: 1rem solid var(--color-ui-background);
+        &::-webkit-scrollbar-thumb, &::-webkit-scrollbar-track-piece {
+            border-right: 1rem solid var(--color-ui-background);
+        }
     }
 
 
